tests/ui/use/use-super-global-path.stderr
error[E0433]: failed to resolve: global paths cannot start with `super`
  --> $DIR/use-super-global-path.rs:7:11
   |
LL |     use ::super::{S, Z};
   |           ^^^^^ global paths cannot start with `super`

error[E0433]: failed to resolve: global paths cannot start with `super`
  --> $DIR/use-super-global-path.rs:7:11
   |
LL |     use ::super::{S, Z};
   |           ^^^^^ global paths cannot start with `super`
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0433]: failed to resolve: global paths cannot start with `super`
  --> $DIR/use-super-global-path.rs:11:15
   |
LL |         use ::super::main;
   |               ^^^^^ global paths cannot start with `super`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0433`.
